--- a/Tarea01IM/index.htm
+++ b/Tarea01IM/index.htm
@@ -131,7 +131,7 @@
         <h3>Servicios</h3>
       </div>
       <div class="card" onmouseover="zoomIn(this)" onmouseout="zoomOut(this)">
-        <img src="img/atencion3.PNG" alt="">
+        <img src="img/atencion3.png" alt="">
         <h3>Web</h3>
       </div>
       <div class="card" onmouseover="zoomIn(this)" onmouseout="zoomOut(this)">
